--- a/ngrx/ngrx-todo-tutorial/src/app/app.component.html
+++ b/ngrx/ngrx-todo-tutorial/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="row">
-    <h2>{{ currentUrl$ | async }}</h2>
+    <h2>Current url: {{ currentUrl$ | async }}</h2>
     <router-outlet></router-outlet>
   </div>
 </div>
