alnadjah/shop-app:remove unused files

--- a/al-nadjah/alnadjah/src/app/components/footer/footer.component.html
+++ b/al-nadjah/alnadjah/src/app/components/footer/footer.component.html
@@ -57,11 +57,17 @@
           <h4 class="widget-title">Install App</h4>
           <p>From App Store or Google Play</p>
           <div class="download-app flex gap-5">
-            <img src="/assets/images/card/apple-store.svg" alt="apple store icon">
-            <img src="/assets/images/card/google-play.svg" alt="google play icon">
+            <img
+              src="/assets/images/card/apple-store.svg"
+              alt="apple store icon"
+            />
+            <img
+              src="/assets/images/card/google-play.svg"
+              alt="google play icon"
+            />
           </div>
           <p>Secured Payment Gateways</p>
-         <app-payment-card></app-payment-card>
+          <app-payment-card></app-payment-card>
         </div>
       </div>
     </div>
