--- a/al-nadjah/alnadjah/src/app/components/loading/loading.component.html
+++ b/al-nadjah/alnadjah/src/app/components/loading/loading.component.html
@@ -1,3 +1,3 @@
 <div class="loading flex jcc aic">
-  <img src="/assets/images/icons/loading.gif" alt="">
+  <img src="/assets/images/icons/loading.gif" alt="" />
 </div>
