--- a/al-nadjah/alnadjah/src/app/components/container/container.component.css
+++ b/al-nadjah/alnadjah/src/app/components/container/container.component.css
@@ -1,9 +1,8 @@
-.container
-{
+.container {
   min-height: 70vh;
   background-color: #efefef;
 }
-.container h1{
+.container h1 {
   margin: 0;
   padding: 30px 0;
 }
