--- a/al-nadjah/alnadjah/src/app/components/container/container.component.html
+++ b/al-nadjah/alnadjah/src/app/components/container/container.component.html
@@ -2,9 +2,7 @@
 <div class="container">
   <div class="content">
     <h1 class="tc">List of products</h1>
-    <app-product-list
-    [products]="products"
-    [isLoading]="isLoading" >
-  </app-product-list>
+    <app-product-list [products]="products" [isLoading]="isLoading">
+    </app-product-list>
   </div>
 </div>
