--- a/al-nadjah/alnadjah/src/app/components/modal-product-view/modal-product-view.component.css
+++ b/al-nadjah/alnadjah/src/app/components/modal-product-view/modal-product-view.component.css
@@ -6,10 +6,9 @@
   z-index: 888;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
-.overlay
-{
+.overlay {
   position: fixed;
   z-index: 99;
   width: 100%;
@@ -20,35 +19,32 @@
   background-color: #1d1d1d;
 }
 
-.modal-product-view-container img{
+.modal-product-view-container img {
   width: 100%;
   height: 100%;
 }
-.modal-product-view-details-price del h4{
+.modal-product-view-details-price del h4 {
   font-size: 2rem;
-
 }
-.modal-product-view-details-price h4{
+.modal-product-view-details-price h4 {
   font-size: 3rem;
   color: #3f51b5;
   font-weight: bold;
 }
 
-
-.modal-product-view-details
-{
+.modal-product-view-details {
   text-align: center;
 }
-.modal-product-view-details-button{
+.modal-product-view-details-button {
   width: 95%;
 }
-.modal-product-view-details-button button{
+.modal-product-view-details-button button {
   height: 45px;
   background-color: #3f51b5;
 }
 
-@media screen and (max-width: 660px){
-  .modal-product-view-container{
+@media screen and (max-width: 660px) {
+  .modal-product-view-container {
     width: 95%;
   }
 }
