--- a/al-nadjah/alnadjah/src/app/components/product-details/product-details.component.html
+++ b/al-nadjah/alnadjah/src/app/components/product-details/product-details.component.html
@@ -1,8 +1,14 @@
 <div class="single-product-details-container content">
   <div class="product-details-title">
     <ul class="flex unlisted">
-      <li><a routerLink="description" routerLinkActive="active">Description</a></li>
-      <li><a routerLink="additional-info" routerLinkActive="active">Additional Info</a></li>
+      <li>
+        <a routerLink="description" routerLinkActive="active">Description</a>
+      </li>
+      <li>
+        <a routerLink="additional-info" routerLinkActive="active"
+          >Additional Info</a
+        >
+      </li>
       <li><a routerLink="vendor-info" routerLinkActive="active">Vendor</a></li>
       <li><a routerLink="reviews" routerLinkActive="active">Reviews</a></li>
     </ul>
