--- a/al-nadjah/alnadjah/src/app/components/product-list/product-list.component.html
+++ b/al-nadjah/alnadjah/src/app/components/product-list/product-list.component.html
@@ -1,22 +1,22 @@
 <div class="product-list">
   <app-loading *ngIf="isLoading"></app-loading>
 
-
-    <app-product-item *ngFor="let product of products" [product]="product"
-      (deleteProductItem)="handleDeleteProduct($event)"
-      (displayProductViewModal)="handleDisplayProductViewModal($event)">
-    </app-product-item>
-
+  <app-product-item
+    *ngFor="let product of products"
+    [product]="product"
+    (deleteProductItem)="handleDeleteProduct($event)"
+    (displayProductViewModal)="handleDisplayProductViewModal($event)"
+  >
+  </app-product-item>
 
   <div class="bar" *ngIf="!isLoading && !products.length">
     Désolé, aucun article n'est disponible pour le moment.
   </div>
 
-
-
-  <app-modal-product-view *ngIf="isDisplayModal && modalProduct" [product]="modalProduct" (close)="handleCloseModal()">
+  <app-modal-product-view
+    *ngIf="isDisplayModal && modalProduct"
+    [product]="modalProduct"
+    (close)="handleCloseModal()"
+  >
   </app-modal-product-view>
-  <!--
-
-  -->
 </div>
