--- a/al-nadjah/alnadjah/src/app/components/products-container/products-container.component.html
+++ b/al-nadjah/alnadjah/src/app/components/products-container/products-container.component.html
@@ -19,11 +19,5 @@
   <div class="products-list flex-1 flex wrap gap-10 jcc p-10">
     <app-product-list [products]="products" [isLoading]="isLoading">
     </app-product-list>
-    <!--
-
-      <app-product-item
-      *ngFor="let product of products"
-      [product]="product">
-    </app-product-item>
-  --></div>
+  </div>
 </div>
